--- a/admin_side/templates/login2.html
+++ b/admin_side/templates/login2.html
@@ -96,18 +96,18 @@
       <!-- Right side - Stacked Images -->
       <div class="image-section">
         <img
-          src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Rectangle%204-GpeWKS9KLtGtHw7wYjFlkfrO5Jygac.png"
+          src="{% static '/assets/Rectangle-4.png' %}"
           alt="Background Pattern"
           class="background-image"
         />
         <div class="image-overlay">
           <img
-            src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Rectangle%205-j76GZzYY5QqAcPYduySYLi12D6uwgn.png"
+            src="{% static '/assets/Rectangle-5.png' %}"
             alt="Purple Background"
             class="overlay-image"
           />
           <img
-            src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/Tourism_high_res_logo__2_-removebg-jLxkRxIPQcqqtQKW6MELi9tOvHnIOA.png"
+            src="{% static '/assets/logo.png' %}"
             alt="Tourism Logo"
             class="logo"
           />
