--- a/staticfiles/admin/admin_login.css
+++ b/staticfiles/admin/admin_login.css
@@ -89,7 +89,7 @@ body {
     text-decoration: underline;
   }
   
-  .login-button {
+  .login-button, .submit-button {
     width: 100%;
     padding: 0.75rem;
     background-color: #6C5DD3;
@@ -100,9 +100,23 @@ body {
     cursor: pointer;
   }
   
-  .login-button:hover {
+  .login-button:hover, .submit-button:hover {
     background-color: #5c4eb8;
   }
+
+  .submit-button {
+  width: 30%;
+  padding: 0.5rem;
+  background-color: #6c5dd3;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+
+  
   
   .image-section {
     display: none;
