--- a/admin_side/templates/admin_base.html
+++ b/admin_side/templates/admin_base.html
@@ -127,7 +127,7 @@
             aria-labelledby="dropdownMenuButton"
           >
             <li>
-              <a class="dropdown-item" href="/admin_side/login/">Logout</a>
+              <a href="{% url 'logout' %}" class="logout-button" style="all:unset">Logout</a>
             </li>
           </ul>
         </div>
