--- a/admin_side/templates/admin_food_drink.html
+++ b/admin_side/templates/admin_food_drink.html
@@ -1,5 +1,6 @@
 {% extends "admin_base.html" %}
 {% load static %}
+{% block page_title %} Restaurant {% endblock %}
 {% block content %}
 <!-- Main Content -->
 <div class="destination-content">
