--- a/admin_side/templates/admin_accomodation.html
+++ b/admin_side/templates/admin_accomodation.html
@@ -1,5 +1,6 @@
 {% extends "admin_base.html" %}
 {% load static %}
+{% block page_title %} Accommodation {% endblock %}
 {% block content %}
 <!-- Main Content -->
 <div class="accommodation-content">
