--- a/admin_side/templates/admin_activity.html
+++ b/admin_side/templates/admin_activity.html
@@ -1,5 +1,6 @@
 {% extends "admin_base.html" %}
 {% load static %}
+{% block page_title %} Activity {% endblock %}
 {% block content %}
 <!-- Main Content -->
 <div class="destination-content">
