--- a/admin_side/templates/admin_article.html
+++ b/admin_side/templates/admin_article.html
@@ -1,6 +1,8 @@
 {% extends "admin_base.html" %}
 {% load static %}
+{% block page_title %} Article {% endblock %}
 {% block content %}
+
 <div class="destination-content">
     {% csrf_token %}
     <!-- Search and Add -->
