--- a/admin_side/templates/admin_destination.html
+++ b/admin_side/templates/admin_destination.html
@@ -1,5 +1,5 @@
 {% extends "admin_base.html" %} {% load static %} {% block content %}
-<!-- Main Content -->
+{% block page_title %} Destination {% endblock %}
 <div class="destination-content">
   {% csrf_token %}
   <!-- Search and Add -->
