--- a/admin_side/templates/admin_base.html
+++ b/admin_side/templates/admin_base.html
@@ -100,6 +100,17 @@
             <i class="bi bi-newspaper"></i> Articles
           </a>
         </li>
+        <li class="nav-item">
+          <a
+            class="nav-link nav-font-color"
+            href="{% url 'admin_chatbot_file' %}"
+            role="button"
+            aria-expanded="false"
+            aria-controls="articlesDropdown"
+          >
+            <i class="bi bi-robot"></i> Chatbot Content
+          </a>
+        </li>
       </ul>
     </div>
     <div class="content">
@@ -127,14 +138,18 @@
             aria-labelledby="dropdownMenuButton"
           >
             <li>
-              <a href="{% url 'logout' %}" class="logout-button" style="all:unset">Logout</a>
+              <a
+                href="{% url 'logout' %}"
+                class="logout-button"
+                style="all: unset"
+                >Logout</a
+              >
             </li>
           </ul>
         </div>
       </div>
     </div>
-    {% block content %} 
-    {% endblock %}
+    {% block content %} {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
